tweaking navigation widths to fix 'Field Guide' wrapping.

--- a/css/layout.styl
+++ b/css/layout.styl
@@ -125,7 +125,7 @@
     
     li
       display: inline-block
-      width: 12%
+      width: 12.5%
       margin: 0
       text-align: center
       text-transform: uppercase
